# c-kafka-trace-producer

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: aarch64-none-linux-gnu.cmake
config/: application.properties
deploy/broker/: configure-kafka.sh  fix-memory.sh  install-kafka.sh  setup-systemd.sh  start-kafka.sh  stop-kafka.sh  test-kafka.sh
deploy/device/: install-service.sh  run-foreground.sh  start.sh  status.sh  stop.sh  tail-log.sh
docs/: amd64-build-and-deploy.md  arm64-build-and-deploy.md  buildroot-kafka-producer-deploy-and-run.md  buildroot-target-deploy-and-run.md  deployment-guide.md  kafka启动.md  librdkafka-arm64-cross-build.md  project-build-artifacts-explained.md  scripts-overview.md
include/: kafka_trace_producer.h  properties.h  trace_config.h  trace_simulator.h
scripts/: build-arm64-cross-windows-direct.ps1  build-arm64-cross-windows.ps1  build-arm64-local-rdkafka.sh  build-arm64-native.sh  build-rdkafka-local.sh  install-build-deps-ubuntu.sh  package-release-cross-windows.ps1  package-release.sh  prepare-arm64-toolchain-shim-windows.ps1  validate-arm64-toolchain-windows.ps1
src/: kafka_trace_producer.c  kafka_trace_producer.cpp  main.c  main.cpp  properties.c  properties.cpp  rdkafka_probe.c  rdkafka_probe.cpp  simple_consumer.c  simple_consumer.cpp  trace_config.c  trace_config.cpp  trace_simulator.c  trace_simulator.cpp
